--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
 dependencies {
     def room_version = "2.3.0"
     def lifecycle_version = "2.2.0"
+    def retrofitVersion = '2.7.1'
+    def logging_version = "4.3.1"
+
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
@@ -50,6 +53,14 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.okhttp3:okhttp:$logging_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
