--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    implementation "com.google.android.gms:play-services-location:17.0.0"
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
