--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
 }
 apply plugin: "kotlin-kapt"
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdk 30
 
@@ -63,6 +64,16 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation "com.google.android.gms:play-services-location:17.0.0"
+
+    def paging_version = "3.0.0-alpha07"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
+    // alternatively - without Android dependencies for tests
+    testImplementation "androidx.paging:paging-common:$paging_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
